--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/serverless": "^3.12.7",
     "esbuild": "^0.14.41",
     "serverless": "^3.18.2",
+    "serverless-domain-manager": "^6.0.3",
     "serverless-dotenv-plugin": "^3.0.0",
     "serverless-esbuild": "^1.28.1",
     "serverless-offline": "^8.8.0",
