--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "got": "11.8.3",
     "lambda-request-handler": "^0.5.1-alpha1",
     "nanoid": "^3.3.4",
+    "query-string": "^7.1.1",
     "serverless-dynamodb-local": "^0.2.40",
     "telegraf": "^4.8.2"
   }
