--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.64",
     "@types/jest": "^26.0.14",
+    "@types/nanoid-dictionary": "^4.2.0",
     "@types/serverless": "^3.12.7",
     "esbuild": "^0.14.41",
     "serverless": "^3.18.2",
@@ -30,6 +31,7 @@
     "got": "11.8.3",
     "lambda-request-handler": "^0.5.1-alpha1",
     "nanoid": "^3.3.4",
+    "nanoid-dictionary": "^4.3.0",
     "query-string": "^7.1.1",
     "telegraf": "^4.8.2"
   }
