Manually create a .env file with secrets value

--- a/.github/workflows/deploy-on-test.yml
+++ b/.github/workflows/deploy-on-test.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - autodeploy-fuckups
 
 jobs:
   build:
@@ -26,5 +27,19 @@ jobs:
           always-auth: true
           node-version: "16.x"
       - run: npm install -g yarn
+      - name: Create .env file
+        run: |
+          touch .env
+          echo YARN_TOKEN=${{ secrets.YARN_TOKEN }} >> .env
+          echo AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} >> .env
+          echo AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} >> .env
+          echo BOT_TOKEN=${{ secrets.BOT_TOKEN }} >> .env
+          echo SLACK_BOT_TOKEN=${{ secrets.SLACK_BOT_TOKEN }} >> .env
+          echo SLACK_CLIENT_ID=${{ secrets.SLACK_CLIENT_ID }} >> .env
+          echo SLACK_SIGNING_SECRET=${{ secrets.SLACK_SIGNING_SECRET }} >> .env
+          echo SLACK_CLIENT_SECRET=${{ secrets.SLACK_CLIENT_SECRET }} >> .env
+          echo MEX_SERVICE_REFRESH_TOKEN=${{ secrets.MEX_SERVICE_REFRESH_TOKEN }} >> .env
+          echo MEX_SERVICE_CLIENT_ID=${{ secrets.MEX_SERVICE_CLIENT_ID }} >> .env
+          echo REDIRECT_HOST=${{ secrets.REDIRECT_HOST }} >> .env
       - run: yarn --no-default-rc
       - run: yarn sls deploy --stage=test
