--- a/.github/workflows/deploy-on-test.yml
+++ b/.github/workflows/deploy-on-test.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      YARN_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      YARN_TOKEN: ${{ secrets.YARN_TOKEN }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
@@ -27,6 +27,8 @@ jobs:
         with:
           always-auth: true
           node-version: '16.x'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@workduck-io'
       - run: npm install -g yarn
       - name: Create .env file
         run: |
@@ -41,5 +43,5 @@ jobs:
           echo MEX_SERVICE_CLIENT_ID=${{ secrets.MEX_SERVICE_CLIENT_ID }} >> .env
           echo REDIRECT_HOST=${{ secrets.REDIRECT_HOST }} >> .env
           echo MEXIT_MIDDLEWARE_IP=${{ secrets.MEXIT_MIDDLEWARE_IP }} >> .env
-      - run: yarn --no-default-rc
+      - run: yarn
       - run: yarn sls deploy --stage=test
