--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "serverless-dotenv-plugin": "^3.0.0",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-esbuild": "^1.28.1",
+    "serverless-git-commit-tracker": "^0.3.0",
     "serverless-offline": "^8.8.0",
     "serverless-prune-plugin": "^2.0.1",
+    "serverless-s3-deploy": "^0.10.1",
     "ts-loader": "^9.3.0",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
@@ -30,6 +32,7 @@
   "dependencies": {
     "@slack/bolt": "^3.11.1",
     "@workduck-io/mex-default-user-token": "^0.0.1",
+    "@workduck-io/serverless-slack-plugin": "^1.0.0",
     "dynamodb-toolbox": "^0.3.5",
     "got": "11.8.3",
     "lambda-request-handler": "^0.5.1-alpha1",
