--- a/.github/workflows/deploy-on-test.yml
+++ b/.github/workflows/deploy-on-test.yml
@@ -13,6 +13,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+      SLACK_RELEASE_TRACKER__BOT_TOKEN: ${{ secrets.SLACK_RELEASE_TRACKER__BOT_TOKEN }}
       SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
       SLACK_CLIENT_ID: ${{ secrets.SLACK_CLIENT_ID }}
       SLACK_SIGNING_SECRET: ${{ secrets.SLACK_SIGNING_SECRET }}
@@ -26,15 +27,16 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           always-auth: true
-          node-version: '16.x'
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@workduck-io'
+          node-version: "16.x"
+          registry-url: "https://npm.pkg.github.com"
+          scope: "@workduck-io"
       - run: npm install -g yarn
       - name: Create .env file
         run: |
           touch .env
           echo YARN_TOKEN=${{ secrets.YARN_TOKEN }} >> .env
           echo BOT_TOKEN=${{ secrets.BOT_TOKEN }} >> .env
+          echo SLACK_RELEASE_TRACKER__BOT_TOKEN=${{ secrets.SLACK_RELEASE_TRACKER__BOT_TOKEN }} >> .env
           echo SLACK_BOT_TOKEN=${{ secrets.SLACK_BOT_TOKEN }} >> .env
           echo SLACK_CLIENT_ID=${{ secrets.SLACK_CLIENT_ID }} >> .env
           echo SLACK_SIGNING_SECRET=${{ secrets.SLACK_SIGNING_SECRET }} >> .env
