--- a/.github/workflows/deploy-on-test.yml
+++ b/.github/workflows/deploy-on-test.yml
@@ -13,11 +13,12 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+      SLACK_RELEASE_TRACKER_BOT_TOKEN: ${{ secrets.SLACK_RELEASE_TRACKER_BOT_TOKEN }}
       SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
       SLACK_CLIENT_ID: ${{ secrets.SLACK_CLIENT_ID }}
       SLACK_SIGNING_SECRET: ${{ secrets.SLACK_SIGNING_SECRET }}
       SLACK_CLIENT_SECRET: ${{ secrets.SLACK_CLIENT_SECRET }}
-      MEX_SERVICE_REFRESH_TOKEN: ${{ secrets.MEX_SERVICE_REFRESH_TOKEN }}
+      MEX_DEFAULT_USER_REFRESH_TOKEN: ${{ secrets.MEX_DEFAULT_USER_REFRESH_TOKEN }}
       MEX_SERVICE_CLIENT_ID: ${{ secrets.MEX_SERVICE_CLIENT_ID }}
       REDIRECT_HOST: ${{ secrets.REDIRECT_HOST }}
       MEXIT_MIDDLEWARE_IP: ${{ secrets.MEXIT_MIDDLEWARE_IP }}
@@ -26,22 +27,25 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           always-auth: true
-          node-version: '16.x'
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@workduck-io'
+          node-version: "16.x"
+          registry-url: "https://npm.pkg.github.com"
+          scope: "@workduck-io"
       - run: npm install -g yarn
       - name: Create .env file
         run: |
           touch .env
           echo YARN_TOKEN=${{ secrets.YARN_TOKEN }} >> .env
           echo BOT_TOKEN=${{ secrets.BOT_TOKEN }} >> .env
+          echo SLACK_RELEASE_TRACKER_BOT_TOKEN=${{ secrets.SLACK_RELEASE_TRACKER_BOT_TOKEN }} >> .env
           echo SLACK_BOT_TOKEN=${{ secrets.SLACK_BOT_TOKEN }} >> .env
           echo SLACK_CLIENT_ID=${{ secrets.SLACK_CLIENT_ID }} >> .env
           echo SLACK_SIGNING_SECRET=${{ secrets.SLACK_SIGNING_SECRET }} >> .env
           echo SLACK_CLIENT_SECRET=${{ secrets.SLACK_CLIENT_SECRET }} >> .env
-          echo MEX_SERVICE_REFRESH_TOKEN=${{ secrets.MEX_SERVICE_REFRESH_TOKEN }} >> .env
+          echo MEX_DEFAULT_USER_REFRESH_TOKEN=${{ secrets.MEX_DEFAULT_USER_REFRESH_TOKEN }} >> .env
           echo MEX_SERVICE_CLIENT_ID=${{ secrets.MEX_SERVICE_CLIENT_ID }} >> .env
           echo REDIRECT_HOST=${{ secrets.REDIRECT_HOST }} >> .env
           echo MEXIT_MIDDLEWARE_IP=${{ secrets.MEXIT_MIDDLEWARE_IP }} >> .env
       - run: yarn
+      - name: Create gitReleases Folder
+        run: mkdir gitReleases
       - run: yarn sls deploy --stage=test
