--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,4 @@ SLACK_CLIENT_SECRET=<SLACK_CLIENT_SECRET>
 MEX_DEFAULT_USER_REFRESH_TOKEN=<MEX_DEFAULT_USER_REFRESH_TOKEN>
 MEX_SERVICE_CLIENT_ID=<COGNITO_CLIENT_ID>
 REDIRECT_HOST=<REDIRECT_HOST>
+WHATSAPP_BOT_TOKEN=<WHATSAPP_BOT_TOKEN>
