--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@slack/bolt": "^3.11.1",
     "@workduck-io/mex-default-user-token": "^0.0.1",
     "@workduck-io/serverless-slack-plugin": "^1.0.0",
+    "body-parser": "^1.20.0",
     "dynamodb-toolbox": "^0.3.5",
+    "express": "^4.18.1",
     "got": "11.8.3",
     "lambda-request-handler": "^0.5.1-alpha1",
     "nanoid": "^3.3.4",
