--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,4 @@ MEX_DEFAULT_USER_REFRESH_TOKEN=<MEX_DEFAULT_USER_REFRESH_TOKEN>
 MEX_SERVICE_CLIENT_ID=<COGNITO_CLIENT_ID>
 REDIRECT_HOST=<REDIRECT_HOST>
 WHATSAPP_BOT_TOKEN=<WHATSAPP_BOT_TOKEN>
+WHATSAPP_VERIFY_TOKEN=<WHATSAPP_VERIFY_TOKEN>
