rebase with main

--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,4 @@ MEX_SERVICE_CLIENT_ID=<COGNITO_CLIENT_ID>
 REDIRECT_HOST=<REDIRECT_HOST>
 WHATSAPP_BOT_TOKEN=<WHATSAPP_BOT_TOKEN>
 WHATSAPP_VERIFY_TOKEN=<WHATSAPP_VERIFY_TOKEN>
+WHATSAPP_BOT_NUMBER=<WHATSAPP_BOT_NUMBER>
