[TASK] Mex WhatsApp Integration (#16)
https://github.com/workduck-io/mex-loch/pull/16

Co-authored-by: Mukul Mehta <mukul@workduck.io>

--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,6 @@ SLACK_CLIENT_SECRET=<SLACK_CLIENT_SECRET>
 MEX_DEFAULT_USER_REFRESH_TOKEN=<MEX_DEFAULT_USER_REFRESH_TOKEN>
 MEX_SERVICE_CLIENT_ID=<COGNITO_CLIENT_ID>
 REDIRECT_HOST=<REDIRECT_HOST>
+WHATSAPP_BOT_TOKEN=<WHATSAPP_BOT_TOKEN>
+WHATSAPP_VERIFY_TOKEN=<WHATSAPP_VERIFY_TOKEN>
+WHATSAPP_BOT_NUMBER=<WHATSAPP_BOT_NUMBER>
