Change stage name in github actions auto-deploy

--- a/.github/workflows/deploy-on-test.yml
+++ b/.github/workflows/deploy-on-test.yml
@@ -56,4 +56,4 @@ jobs:
       - run: yarn
       - name: Create gitReleases Folder
         run: mkdir gitReleases
-      - run: yarn sls deploy --stage=test
+      - run: yarn sls deploy --stage=staging
