--- a/.github/workflows/deploy-on-test.yml
+++ b/.github/workflows/deploy-on-test.yml
@@ -28,12 +28,25 @@ jobs:
       MEXIT_MIDDLEWARE_IP: ${{ secrets.MEXIT_MIDDLEWARE_IP }}
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v1
+        with:
+            path: ${{ steps.yarn-cache.outputs.dir }}
+            key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+            restore-keys: |
+              ${{ runner.os }}-yarn-
+
       - uses: actions/setup-node@v2
         with:
           always-auth: true
           node-version: '16.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@workduck-io'
+    
       - run: npm install -g yarn
       - name: Create .env file
         run: |
@@ -53,7 +66,11 @@ jobs:
           echo REDIRECT_HOST=${{ secrets.REDIRECT_HOST }} >> .env
           echo MEXIT_MIDDLEWARE_IP=${{ secrets.MEXIT_MIDDLEWARE_IP }} >> .env
           echo MEX_DEFAULT_USER_REFRESH_TOKEN=${{ secrets.MEX_DEFAULT_USER_REFRESH_TOKEN }} >> .env
-      - run: yarn
+
+      - name: Install Dependencies 
+        run: yarn install --prefer-offline
+
       - name: Create gitReleases Folder
         run: mkdir gitReleases
+
       - run: yarn sls deploy --stage=staging
