Revert "Mex Loch Deployment Stages"

--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.1",
   "main": "handler.js",
   "scripts": {
-    "start:local": "sls offline start --stage local",
-    "start:staging": "sls offline start --stage staging",
-    "start:test": "sls offline start --stage test",
+    "local": "serverless offline start --stage local",
+    "dev": "serverless offline start --stage test",
     "swagger": "sls generate-swagger"
   },
   "author": "",
