--- a/.github/workflows/deploy-on-test.yml
+++ b/.github/workflows/deploy-on-test.yml
@@ -23,30 +23,29 @@ jobs:
       WHATSAPP_VERIFY_TOKEN: ${{ secrets.WHATSAPP_VERIFY_TOKEN }}
       WHATSAPP_BOT_NUMBER: ${{ secrets.WHATSAPP_BOT_NUMBER }}
       MEX_DEFAULT_USER_REFRESH_TOKEN: ${{ secrets.MEX_DEFAULT_USER_REFRESH_TOKEN }}
-      MEX_SERVICE_CLIENT_ID: ${{ secrets.MEX_SERVICE_CLIENT_ID }}
       REDIRECT_HOST: ${{ secrets.REDIRECT_HOST }}
       MEXIT_MIDDLEWARE_IP: ${{ secrets.MEXIT_MIDDLEWARE_IP }}
     steps:
       - uses: actions/checkout@v2
-      
+
       - name: Get yarn cache
         id: yarn-cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
       - uses: actions/cache@v1
         with:
-            path: ${{ steps.yarn-cache.outputs.dir }}
-            key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-            restore-keys: |
-              ${{ runner.os }}-yarn-
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       - uses: actions/setup-node@v2
         with:
           always-auth: true
-          node-version: '16.x'
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@workduck-io'
-    
+          node-version: "16.x"
+          registry-url: "https://npm.pkg.github.com"
+          scope: "@workduck-io"
+
       - run: npm install -g yarn
       - name: Create .env file
         run: |
@@ -62,12 +61,11 @@ jobs:
           echo WHATSAPP_BOT_TOKEN=${{ secrets.WHATSAPP_BOT_TOKEN }} >> .env
           echo WHATSAPP_VERIFY_TOKEN=${{ secrets.WHATSAPP_VERIFY_TOKEN }} >> .env
           echo WHATSAPP_BOT_NUMBER=${{ secrets.WHATSAPP_BOT_NUMBER }} >> .env
-          echo MEX_SERVICE_CLIENT_ID=${{ secrets.MEX_SERVICE_CLIENT_ID }} >> .env
           echo REDIRECT_HOST=${{ secrets.REDIRECT_HOST }} >> .env
           echo MEXIT_MIDDLEWARE_IP=${{ secrets.MEXIT_MIDDLEWARE_IP }} >> .env
           echo MEX_DEFAULT_USER_REFRESH_TOKEN=${{ secrets.MEX_DEFAULT_USER_REFRESH_TOKEN }} >> .env
 
-      - name: Install Dependencies 
+      - name: Install Dependencies
         run: yarn install --prefer-offline
 
       - name: Create gitReleases Folder
